--- a/.github/ISSUE_TEMPLATE/release-record.yml
+++ b/.github/ISSUE_TEMPLATE/release-record.yml
@@ -2,67 +2,67 @@ name: Release Record
 description: 'Track and manage the release process for various applications.'
 labels: ['release', 'approval']
 body:
-  - name: Application Name
+  - type: textarea
+    label: Application Name
     description: 'The name of the application for which this release is being tracked.'
     required: true
-    type: text
 
-  - name: Release Version
+  - type: textarea
+    label: Release Version
     description: 'The version of the release being tracked (e.g., v1.2.0).'
     required: true
-    type: text
 
-  - name: Release Description
+  - type: textarea
+    label: Release Description
     description: 'A description of what this release contains.'
     required: true
-    type: textarea
 
-  - name: Pre-release Sign-offs
+  - type: textarea
+    label: Pre-release Sign-offs
     description: 'List of sign-offs needed for the release process.'
     required: true
-    type: text
 
-  - name: Certify-Release Build
+  - type: textarea
+    label: Certify-Release Build
     description: 'Branch(es) to be released and certification steps (SonarQube, Nexus, Checkmarx).'
     required: true
-    type: text
 
-  - name: QA Signoff
+  - type: dropdown
+    label: QA Signoff
     description: 'Has QA signed off on the release? Assign a reviewer.'
     required: true
-    type: dropdown
     options:
       - 'QA Approved'
       - 'QA Not Approved'
 
-  - name: UAT Signoff
+  - type: dropdown
+    label: UAT Signoff
     description: 'Has UAT signed off on the release? Assign a reviewer.'
     required: true
-    type: dropdown
     options:
       - 'UAT Approved'
       - 'UAT Not Approved'
 
-  - name: SRE Signoff
+  - type: dropdown
+    label: SRE Signoff
     description: 'Has SRE signed off on the release? Assign a reviewer.'
     required: true
-    type: dropdown
     options:
       - 'SRE Approved'
       - 'SRE Not Approved'
 
-  - name: App Owner Approval
+  - type: dropdown
+    label: App Owner Approval
     description: 'Has the application owner approved the release? Assign a reviewer.'
     required: true
-    type: dropdown
     options:
       - 'App Owner Approved'
       - 'App Owner Not Approved'
 
-  - name: Post-release Validation
+  - type: checkboxes
+    label: Post-release Validation
     description: 'Post-release validation steps.'
     required: false
-    type: checkboxes
     options:
       - 'Smoke tests'
       - 'Monitor system health'
