--- a/.github/ISSUE_TEMPLATE/release-record.yml
+++ b/.github/ISSUE_TEMPLATE/release-record.yml
@@ -1,69 +1,68 @@
+yaml
+
 name: Release Record
 description: 'Track and manage the release process for various applications.'
 labels: ['release', 'approval']
 body:
-  - type: textarea
-    label: 'Application Name'
-    description: 'The name of the application for which this release is being tracked.'
-    required: true
+  - type: markdown
+    value: |
+      ### Release Record Details
+      _Fill in the details below for the release process._  
+      **Application Name:**  
+      _Enter the name of the application for which this release is being tracked._
 
-  - type: textarea
-    label: 'Release Version'
-    description: 'The version of the release being tracked (e.g., v1.2.0).'
-    required: true
+      **Release Version:**  
+      _Enter the version of the release (e.g., v1.2.0)_
 
-  - type: textarea
-    label: 'Release Description'
-    description: 'A description of what this release contains.'
-    required: true
+      **Release Description:**  
+      _Provide a description of what this release includes, such as new features, bug fixes, etc._
 
-  - type: textarea
-    label: 'Pre-release Sign-offs'
-    description: 'List of sign-offs needed for the release process.'
-    required: true
-
-  - type: textarea
-    label: 'Certify-Release Build'
-    description: 'Branch(es) to be released and certification steps (SonarQube, Nexus, Checkmarx).'
-    required: true
+  - type: checkbox
+    label: Pre-release Steps
+    options:
+      - 'Certify-release build (Check branches being released and perform necessary scans with SonarQube, Nexus, Checkmarx)'
+      - 'QA Signoff'
+      - 'UAT Signoff'
+      - 'SRE Signoff'
+      - 'App Owner Approval'
 
   - type: dropdown
-    label: 'QA Signoff'
-    description: 'Has QA signed off on the release? Assign a reviewer.'
+    label: QA Signoff
+    description: 'Has QA signed off on the release?'
     options:
       - 'QA Approved'
       - 'QA Not Approved'
     required: true
 
   - type: dropdown
-    label: 'UAT Signoff'
-    description: 'Has UAT signed off on the release? Assign a reviewer.'
+    label: UAT Signoff
+    description: 'Has UAT signed off on the release?'
     options:
       - 'UAT Approved'
       - 'UAT Not Approved'
     required: true
 
   - type: dropdown
-    label: 'SRE Signoff'
-    description: 'Has SRE signed off on the release? Assign a reviewer.'
+    label: SRE Signoff
+    description: 'Has SRE signed off on the release?'
     options:
       - 'SRE Approved'
       - 'SRE Not Approved'
     required: true
 
   - type: dropdown
-    label: 'App Owner Approval'
-    description: 'Has the application owner approved the release? Assign a reviewer.'
+    label: App Owner Approval
+    description: 'Has the application owner approved the release?'
     options:
       - 'App Owner Approved'
       - 'App Owner Not Approved'
     required: true
 
-  - type: checkboxes
-    label: 'Post-release Validation'
-    description: 'Post-release validation steps.'
-    options:
-      - 'Smoke tests'
-      - 'Monitor system health'
-      - 'Validate new features'
-    required: false
+  - type: markdown
+    value: |
+      ### Post-release Validation
+      _The steps for validating the release after deployment._
+      - Smoke tests
+      - Monitor system health
+      - Validate new features
+      - Confirm rollback procedures
