--- a/.github/ISSUE_TEMPLATE/release-record.yml
+++ b/.github/ISSUE_TEMPLATE/release-record.yml
@@ -1,6 +1,6 @@
 yaml
 
-application name: Release Record
+name: 'Release Record'
 description: 'Track and manage the release process for various applications.'
 labels:
   - release
