--- a/.github/ISSUE_TEMPLATE/release-record.yml
+++ b/.github/ISSUE_TEMPLATE/release-record.yml
@@ -1,7 +1,7 @@
 yaml
 
-name: "Release Record"
-description: 'Track and manage the release process for various applications.'
+name: "Bug Report"
+description: "File a bug report"
 labels:
   - release
   - approval
