--- a/.github/ISSUE_TEMPLATE/release_record.yml
+++ b/.github/ISSUE_TEMPLATE/release_record.yml
@@ -65,8 +65,8 @@ body:
       options:
         - "Yes"
         - "No"
-      default: "No"
-
+      default: 1  # Index of "No"
+    
   - type: dropdown
     id: uat-signoff
     attributes:
@@ -75,7 +75,7 @@ body:
       options:
         - "Yes"
         - "No"
-      default: "No"
+      default: 1  # Index of "No"
 
   - type: dropdown
     id: sre-signoff
@@ -85,7 +85,7 @@ body:
       options:
         - "Yes"
         - "No"
-      default: "No"
+      default: 1  # Index of "No"
 
   - type: input
     id: app-owner-approval
