--- a/.github/ISSUE_TEMPLATE/release_record.yml
+++ b/.github/ISSUE_TEMPLATE/release_record.yml
@@ -1,20 +1,32 @@
-name: "Release Milestone"
-description: "Template for creating a release milestone with tasks and statuses"
+name: "Release Milestone Template"
+description: "Template for tracking release milestones and associated tasks"
 labels:
   - "release-milestone"
 assignees: []
 body:
-  # Text input for "Release Milestone"
+  # General Release Information
   - type: input
     attributes:
       label: "Release Milestone"
       description: "Enter the release milestone name."
       placeholder: "Enter milestone name"
-      
-  # Release Status field with a short label
+
+  - type: input
+    attributes:
+      label: "Application"
+      description: "Enter the application name."
+      placeholder: "Enter application name"
+
+  - type: input
+    attributes:
+      label: "Target Release Date"
+      description: "Enter the target release date."
+      placeholder: "Enter target date"
+
+  # Release Status Field
   - type: checkboxes
     attributes:
-      label: "Release Status"  # Valid label, minimal but present
+      label: "Release Status"
       description: "Select the current release status."
       options:
         - label: "Draft"
@@ -22,44 +34,27 @@ body:
         - label: "Complete"
         - label: "Cancelled"
 
-  # Text input for "Application"
+  # Activities/Tasks
+  ### 1) Create Rally Milestone and ServiceNow Release
   - type: input
     attributes:
-      label: "Application"
-      description: "Enter the name of the application."
-      placeholder: "Enter application name"
-      
-  # Text input for "Target Date"
-  - type: input
-    attributes:
-      label: "Target Date"
-      description: "Enter the target release date."
-      placeholder: "Enter target release date"
-
-  ## Tasks & Activities with "Assigned to" as Textbox and "Status" as Checkboxes
-  
-  ### 1) Create Rally milestone and ServiceNow Release:
-  - type: input
-    attributes:
-      label: "Assigned to (Rally milestone)"
-      description: "Enter the person assigned to the Rally milestone task."
-      placeholder: "Enter person assigned"
-
+      label: "Assigned to (Rally Milestone)"
+      description: "Enter the GitHub username of the person assigned to this task."
+      placeholder: "Enter GitHub username"
   - type: checkboxes
     attributes:
-      label: "Status (Rally milestone)"
+      label: "Status (Rally Milestone)"
       options:
         - label: "Complete"
         - label: "In Progress"
         - label: "NA"
-        
-  ### 2) QA Sign Off:
+
+  ### 2) QA Sign Off
   - type: input
     attributes:
       label: "Assigned to (QA Sign Off)"
-      description: "Enter the person assigned to QA Sign Off."
-      placeholder: "Enter person assigned"
-
+      description: "Enter the GitHub username of the person assigned to this task."
+      placeholder: "Enter GitHub username"
   - type: checkboxes
     attributes:
       label: "Status (QA Sign Off)"
@@ -68,13 +63,12 @@ body:
         - label: "In Progress"
         - label: "NA"
 
-  ### 3) SRE Signoff:
+  ### 3) SRE Signoff
   - type: input
     attributes:
       label: "Assigned to (SRE Signoff)"
-      description: "Enter the person assigned to SRE Signoff."
-      placeholder: "Enter person assigned"
-
+      description: "Enter the GitHub username of the person assigned to this task."
+      placeholder: "Enter GitHub username"
   - type: checkboxes
     attributes:
       label: "Status (SRE Signoff)"
@@ -83,13 +77,12 @@ body:
         - label: "In Progress"
         - label: "NA"
 
-  ### 4) App Owner Approval:
+  ### 4) App Owner Approval
   - type: input
     attributes:
       label: "Assigned to (App Owner Approval)"
-      description: "Enter the person assigned to App Owner Approval."
-      placeholder: "Enter person assigned"
-
+      description: "Enter the GitHub username of the person assigned to this task."
+      placeholder: "Enter GitHub username"
   - type: checkboxes
     attributes:
       label: "Status (App Owner Approval)"
